# my-auth-sys

./: README.md  app.py  pyproject.toml
db/config/: database.py
db/models/: __init__.py  blacklist.py  user.py
routes/: api.py
routes/functions/: hash_pass.py  token.py
